--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -70,7 +70,7 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
             return (
               <a
                 href={url}
-                title={`Visit the profile of ${name} on ${network}`}
+                title={`${network}`}
                 target="_blank"
                 rel="noopener noreferrer"
               >
