--- a/src/components/sections/styles/pdf.css
+++ b/src/components/sections/styles/pdf.css
@@ -8,6 +8,8 @@
 .pdf-item {
     max-width: 100px;
     position: relative;
+    background-color: #7cc3df;
+    border-radius: 8px;
 }
 
 .pdf-image-wrapper {
