--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,13 +1,13 @@
 ---
 import { basics } from "@cv";
 import Section from "@/components/Section.astro";
-import Mail from "@/icons/Mail.astro";
-import Phone from "@/icons/Phone.astro";
-import X from "@/icons/X.astro";
-import LinkedIn from "@/icons/LinkedIn.astro";
+import Mail from "@/icons/mail.astro";
+import Phone from "@/icons/phone.astro";
+import X from "@/icons/x.astro";
+import LinkedIn from "@/icons/linkedin.astro";
 import GitHub from "@/icons/github.astro";
-import Medium from "@/icons/Medium.astro";
-import WorldMap from "@/icons/WorldMap.astro";
+import Medium from "@/icons/medium.astro";
+import WorldMap from "@/icons/worldmap.astro";
 import type { SocialIcon } from "@/types";
 
 const { name, label, image, location, profiles, phone, email } = basics;
