--- a/src/components/sections/Publication.astro
+++ b/src/components/sections/Publication.astro
@@ -108,7 +108,11 @@ import { publications } from "@cv";
 
   .code-link {
     margin-left: 6px;
-    color: #111;
+    color: #777;
+  }
+
+  .code-link:hover {
+    color: #222;
   }
 
   .article-inner {
