--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -103,7 +103,11 @@ import { projects } from "@cv";
 
   .code-link {
     margin-left: 6px;
-    color: #111;
+    color: #777;
+  }
+
+  .code-link:hover {
+    color: #222;
   }
 
   .article-inner {
