--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -13,6 +13,18 @@ import GitHub from "@/icons/github.astro";
 import Git from "@/icons/git.astro";
 import Tailwind from "@/icons/tailwind.astro";
 import Next from "@/icons/next.astro";
+import Java from "@/icons/java.astro";
+import Scala from "@/icons/scala.astro";
+import Gatling from "@/icons/gatling.astro";
+import Jmeter from "@/icons/jmeter.astro";
+import API from "@/icons/api.astro";
+import Terraform from "@/icons/terraform.astro";
+import Python from "@/icons/python.astro";
+import Go from "@/icons/go.astro";
+import AWS from "@/icons/aws.astro";
+import Docker from "@/icons/docker.astro";
+import Argo from "@/icons/argo.astro";
+import Jenkins from "@/icons/jenkins.astro";
 import "@/components/sections/styles/pdf.css";
 
 const SKILLS_MAP: Record<string, { icon: any; name: string }> = {
@@ -28,6 +40,18 @@ const SKILLS_MAP: Record<string, { icon: any; name: string }> = {
   Tailwind: { icon: Tailwind, name: "Tailwind CSS" },
   Next: { icon: Next, name: "Next.js" },
   Kubernetes: { icon: Kubernetes, name: "Kubernetes" },
+  Java: { icon: Java, name: "Java" },
+  Scala: { icon: Scala, name: "Scala" },
+  Gatling: { icon: Gatling, name: "Gatling" },
+  Jmeter: { icon: Jmeter, name: "JMeter" },
+  API: { icon: API, name: "REST APIs" },
+  Terraform: { icon: Terraform, name: "Terraform" },
+  Python: { icon: Python, name: "Python" },
+  Go: { icon: Go, name: "Golang" },
+  AWS: { icon: AWS, name: "AWS" },
+  Docker: { icon: Docker, name: "Docker" },
+  Argo: { icon: Argo, name: "Argo" },
+  Jenkins: { icon: Jenkins, name: "Jenkins" },
 };
 ---
 
