--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Publication from "@/components/sections/Publication.astro";
 import KeyboardManager from "@/components/KeyboardManager.astro";
 
 import { basics } from "@cv";
-const { name, label } = basics;
+const { name } = basics;
 ---
 
 <Layout title={`Portfolio of ${name}`}>
