--- a/src/icons/scala.astro
+++ b/src/icons/scala.astro
@@ -1,22 +1,65 @@
-<!doctype html>
-<!-- Uploaded to: SVG Repo, www.svgrepo.com, Transformed by: SVG Repo Mixer Tools -->
+<!--?xml version="1.0" encoding="UTF-8" standalone="no"?--><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
 <svg
-    width="14"
-    height="14"
-    viewBox="0 0 16 16"
-    fill="none"
+    width="16"
+    height="16"
+    viewBox="-80 0 416 416"
+    version="1.1"
     xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    preserveAspectRatio="xMidYMid"
 >
-    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-
-    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
-    ></g>
-
-    <g id="SVGRepo_iconCarrier">
+    <defs>
+        <linearGradient
+            x1="0%"
+            y1="50%"
+            x2="100%"
+            y2="50%"
+            id="linearGradient-1"
+        >
+            <stop stop-color="#4F4F4F" offset="0%"> </stop>
+            <stop stop-color="#000000" offset="100%"> </stop>
+        </linearGradient>
+        <linearGradient
+            x1="0%"
+            y1="50%"
+            x2="100%"
+            y2="50%"
+            id="linearGradient-2"
+        >
+            <stop stop-color="#C40000" offset="0%"> </stop>
+            <stop stop-color="#FF0000" offset="100%"> </stop>
+        </linearGradient>
+    </defs>
+    <g>
         <path
-            fill-rule="nonzero"
-            clip-rule="nonzero"
-            d="M12.7116 0.261121C12.8936 0.405276 13 0.626454 13 0.860694V12.984C13 13.3331 12.7658 13.6374 12.4319 13.722L3.9319 15.8773C3.70785 15.9341 3.47048 15.883 3.28844 15.7389C3.1064 15.5947 3 15.3736 3 15.1393V3.01595C3 2.6669 3.23422 2.36264 3.5681 2.27798L12.0681 0.122725C12.2922 0.0659134 12.5295 0.116967 12.7116 0.261121ZM4.5 3.60987V5.93326L11.5 4.0474V1.83496L4.5 3.60987ZM11.5 5.62152L4.5 7.50738V10.1239L11.5 8.34901V5.62152ZM11.5 9.9172L4.5 11.6921V14.1651L11.5 12.3901V9.9172Z"
-            fill="#444"></path>
+            d="M0,288 L0,256 C0,250.606222 116.376889,241.571556 192.199111,224 L192.199111,224 C228.828444,232.490667 256,242.968889 256,256 L256,256 L256,288 C256,301.024 228.828444,311.509333 192.199111,320 L192.199111,320 C116.376889,302.424889 0,293.390222 0,288"
+            fill="url(#linearGradient-1)"
+            transform="translate(128.000000, 272.000000) scale(1, -1) translate(-128.000000, -272.000000) "
+        >
+        </path>
+        <path
+            d="M0,160 L0,128 C0,122.606222 116.376889,113.571556 192.199111,96 L192.199111,96 C228.828444,104.490667 256,114.968889 256,128 L256,128 L256,160 C256,173.024 228.828444,183.509333 192.199111,192 L192.199111,192 C116.376889,174.424889 0,165.390222 0,160"
+            fill="url(#linearGradient-1)"
+            transform="translate(128.000000, 144.000000) scale(1, -1) translate(-128.000000, -144.000000) "
+        >
+        </path>
+        <path
+            d="M0,224 L0,128 C0,136 256,152 256,192 L256,192 L256,288 C256,248 0,232 0,224"
+            fill="url(#linearGradient-2)"
+            transform="translate(128.000000, 208.000000) scale(1, -1) translate(-128.000000, -208.000000) "
+        >
+        </path>
+        <path
+            d="M0,96 L0,0 C0,8 256,24 256,64 L256,64 L256,160 C256,120 0,104 0,96"
+            fill="url(#linearGradient-2)"
+            transform="translate(128.000000, 80.000000) scale(1, -1) translate(-128.000000, -80.000000) "
+        >
+        </path>
+        <path
+            d="M0,352 L0,256 C0,264 256,280 256,320 L256,320 L256,416 C256,376 0,360 0,352"
+            fill="url(#linearGradient-2)"
+            transform="translate(128.000000, 336.000000) scale(1, -1) translate(-128.000000, -336.000000) "
+        >
+        </path>
     </g>
 </svg>
